[package]
name = "saturn"
version = "1.0.0"
description = "A simple way to record working hours"
authors = ["JoaoPedroPP <poloniponce@protonmail.ch>"]
license-file = "LICENSE"
repository = "https://github.com/JoaoPedroPP/Saturn"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-copy-file", "path-all", "shell-open", "system-tray"] }
dirs = "3.0.2"
auto-launch = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
